# cpp-app-template

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.local.txt  conanfile.txt  gen.ps1  premake5.lua
.devcontainer/: Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
cmake/: CodeCoverage.cmake  Linker.cmake  Packages.cmake  ProjectOptions.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  ThirdParty.cmake  _FORTIFY_SOURCE.hpp
resources/: .clangd  CMakeUserPresets.json
src/: CMakeLists.txt  main.cpp
src/math/: calculator.cpp  calculator.h
tests/: CMakeLists.txt
tools/: install_dependencies.sh
